--- a/app/views/Notes.css
+++ b/app/views/Notes.css
@@ -3,16 +3,22 @@
   height: 100%;
 }
 
-.notes > .titles {
+.sidebar {
   background-color: var(--color-bg-sidebar);
+  box-shadow: var(--shadow-level-0);
+  display: flex;
+  flex-direction: column;
+}
+
+.titles {
+  flex: 1;
   color: var(--color-text-sidebar);
   width: 16rem;
-  box-shadow: var(--shadow-level-0);
   overflow: hidden;
   overflow-y: auto;
 }
 
-.notes > .titles > div {
+.titles > div {
   padding: 0.5rem 1rem;
   border-bottom: 1px solid var(--color-sidebar-highlight);
   user-select: none;
@@ -25,17 +31,26 @@
   align-items: center;
 }
 
-.notes > .titles > div > span {
+.titles > div > span {
   display: none;
   color: var(--color-delete);
 }
 
-.notes > .titles > div.selected:hover > span {
+.titles > div.selected:hover > span {
   display: inline;
 }
 
-.notes > .titles > div.selected {
+.titles > div.selected {
   background-color: var(--color-sidebar-highlight);
+}
+
+.settings {
+  padding: 0.5rem;
+  text-align: right;
+}
+
+.settings a {
+  color: var(--color-text-sidebar);
 }
 
 .empty {
